--- a/app/views/instapost_lessons/lessons/lesson_10.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_10.html.erb
@@ -16,6 +16,8 @@
 root 'posts#index'
 </code></pre>
 
+<%= create_flashcard %>
+
 <p>
   Now, if we go into our terminal and run <code>rake routes</code>, we should see that our root page is pointed to <code>posts#index</code>.
 </p>
@@ -36,7 +38,7 @@ root 'posts#index'
   Now let's navigate ourselves back to the browser and refresh the page. We should now see "Hello World" displayed on the page!
 </p>
 
-
+<%= standard_git_workflow %>
 
 
 
