--- a/app/views/instapost_lessons/lessons/lesson_24.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_24.html.erb
@@ -95,6 +95,8 @@
   Now that we've got the form, we need to display the comments that users post. In the next lesson, you'll be on your own to try to solve this! Good luck!
 </p>
 
+<%= standard_git_workflow %>
+
 
 
 
