--- a/app/views/instapost_lessons/lessons/lesson_26.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_26.html.erb
@@ -28,11 +28,11 @@
 </p>
 
 <p>
-  In our <code>comments_controller.rb</code>, let's add the a <code>destroy</code> method that will delete a comment and then redirect the user to the <code>root_path</code>.
+  In our <code>comments_controller.rb</code>, let's add a <code>destroy</code> method that will delete a comment and then redirect the user to the <code>root_path</code>.
 </p>
 
 <p class="alert alert-warning">
-  HINT: The code will be very much the same as the code in <code>posts_controller.rb</code>!
+  HINT: The code will be very much the same as the code in <code>posts_controller.rb</code>! Refer back to <%= link_to 'this lesson', '/instapost_lessons/18' %> for help.
 </p>
 
 <p>
