--- a/app/views/instapost_lessons/lessons/lesson_33.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_33.html.erb
@@ -5,11 +5,11 @@
 </p>
 
 <p>
-  By now, you probably understand many of the basic Rails concepts. The important thing is to keep on coding and to keep on learning. The fun thing about software engineering is that there is always something more to learn!
+  By now, you probably understand many of the basic Rails concepts. <strong>The important thing is to keep on coding and to keep on learning.</strong> The fun thing about software engineering is that there is always something more to learn!
 </p>
 
 <p>
-  With that being said, here are some final tasks that you can do to make your site even more professional looking! Do tackle the tasks labeled "Easy", but don't bother trying the tasks labeled higher than "Easy", they are pretty big tasks!
+  With that being said, here are some final tasks that you can do to make your site even more professional looking! Do tackle the tasks labeled "Easy", but don't bother trying the tasks labeled higher than "Easy" if you don't feel like it, they are pretty big tasks!
 </p>
 
 <ul>
