--- a/app/views/instapost_lessons/lessons/lesson_16.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_16.html.erb
@@ -1,4 +1,4 @@
-<h1><%= title_for(InstapostLesson, 5, 7) %></h1>
+<h1><%= title_for(InstapostLesson, 5, 8) %></h1>
 
 <p>
   As a user, I should be able to not only create posts, but to update them, delete them, and view individual posts. Luckily, when we put <code>resources :posts</code> in our <code>routes.rb</code>, Rails automatically created routes that do exactly this.
@@ -31,6 +31,8 @@ end
   <p>
     <code>params</code> are basically user specified data to the rails application. When we go to the edit page for a post, we pass in the <code>id</code> of the <code>Post</code> as a paramter. For example, if we want to edit a <code>Post</code> with an <code>id</code> of <code>1</code>, the URL would look like this: <code>http://localhost:3000/posts/1/edit</code>). In this case, the <code>1</code> at the end of the URL is considered as a parameter by Rails. We know this because if we run <code>rake routes</code>, we see that the URI pattern is <code>/posts/:id/edit</code> where <code>:id</code> represents the parameter.
   </p>
+
+  <%= create_flashcard %>
 </div>
 
 <p>
@@ -69,7 +71,7 @@ end
 </code></pre>
 
 <p>
-  Save the file and refresh the page. You should now see an edit link that works! However, we don't want to show this if the post isn't a post that was created by the <code>current_user</code>. Let's add a conditional to make sure that other users can't see this link.
+  Save the file and refresh the page. You should now see an edit link that works! <strong>However, we don't want to show this if the post isn't a post that was created by the <code>current_user</code>.</strong> Let's add a conditional to make sure that other users can't see this link.
 </p>
 
 <pre><code class="erb">
@@ -86,6 +88,10 @@ end
 </code></pre>
 
 <p>
+  Here, we check to see if the <code>post</code>'s <code>user_id</code> matches the <code>id</code> of the current user that is logged in.
+</p>
+
+<p>
   Cool. The next step is easy. All we have to do is copy the form that we created using <code>simple_form</code> in <code>new.html.erb</code> and paste it into our <code>edit.html.erb</code>.
 </p>
 
@@ -100,7 +106,7 @@ end
 </code></pre>
 
 <p>
-  The submit button says "Post", but since that doesn't really make sense since we're updating the post, let's change the text to "Update".
+  The submit button says "Post", but since that doesn't really make sense because we're <em>updating</em> the post instead of posting one, let's change the text to "Update".
 </p>
 
 <pre><code class="erb">
@@ -118,7 +124,7 @@ end
 </p>
 
 <p>
-  Back to our <code>posts_controller.rb</code>! Under our <code>edit</code> method, let's add the following lines of code:
+  Back to our <code>posts_controller.rb</code>! Beneath our <code>edit</code> method, let's add the following lines of code:
 </p>
 
 <pre><code class="ruby">
@@ -143,13 +149,14 @@ end
 </p>
 
 <p>
-  There's one last thing we need to do. Although we added a conditional in our loop in <code>index.html.erb</code> to make sure that other users can't see the link to edit the post, people could still go to a URL like <code>http://localhost:3000/posts/1/edit</code> and try to update the post. We need to make sure that we don't allow this to happen.
+  There's one last thing we need to do. Although we added a conditional in our loop in <code>index.html.erb</code> to make sure that other users can't see the link to edit the post, people could still manually go to the Edit Posts URL and try to update the post. For example, someone could go to <code>http://localhost:3000/posts/1/edit</code> and they would be able to edit a Post with the <code>id</code> of <code>1</code>. We need to make sure that we don't allow this to happen.
 </p>
 
 <p>
   In the next lesson, we're going to implement our first filter to make this happen.
 </p>
 
+<%= standard_git_workflow %>
 
 
 
