--- a/app/views/instapost_lessons/lessons/lesson_21.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_21.html.erb
@@ -1,7 +1,7 @@
 <h1><%= title_for(InstapostLesson, 6, 2) %></h1>
 
 <p>
-  In the last lesson, we ran database migrations for the <code>Comment</code> object. Let's now set up the database relations between our objects in this web app.
+  In the last lesson, we ran database migrations for the <code>Comment</code> object. Let's now set up the <strong>database relations</strong> between our objects in this web app.
 </p>
 
 <p>
