--- a/app/views/static_pages/preregistration.html.erb
+++ b/app/views/static_pages/preregistration.html.erb
@@ -24,7 +24,7 @@
  -->
                         <div class="row">
 
-                            <%= render 'preregistration' %>
+                            <%= render 'mailchimp' %>
 
                             
                         </div><!--//row-->
