--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,6 +10,7 @@
                             <li><a href="/about"><i class="fa fa-caret-right"></i>Who we are</a></li>
                             <!-- <li><a href="#"><i class="fa fa-caret-right"></i>Jobs</a></li> -->
                             <li><a href="/contact_us"><i class="fa fa-caret-right"></i>Contact us</a></li>
+                            <li><a href="/support"><i class="fa fa-caret-right"></i>Support TECHRISE</a></li>
                         </ul>
                     </div><!--//footer-col-inner-->
                 </div><!--//foooter-col-->    
@@ -18,6 +19,7 @@
                         <h3 class="title">Curriculum</h3>
                         <ul class="list-unstyled">
                             <li><a href="/learn"><i class="fa fa-caret-right"></i>Learn More</a></li>
+                            <li><a href="/preregistration"><i class="fa fa-caret-right"></i>Sign Up For Pre-registration</a></li>
 <!--                             <li><a href="#"><i class="fa fa-caret-right"></i>Download Apps</a></li>
                             <li><a href="#"><i class="fa fa-caret-right"></i>Pricing</a></li> -->
                         </ul>
