--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -46,6 +46,10 @@
                     </li>
 
                     <li class="nav-item page-scroll">
+                      <a href="/support">Support Us</a>
+                    </li>
+
+                    <li class="nav-item page-scroll">
                       <a href="/blog">Blog</a>
                     </li>
 
